# cppCmakeTempl

./: .clang-format  .gitignore  CMakeLists.txt  conanProfile  conanfile.txt
.devcontainer/: Dockerfile.vscode  devcontainer.json
apps/app/: CMakeLists.txt
apps/app/include/: someClass.hpp
apps/app/src/: main.cpp  someClass.cpp
apps/app/tests/: CMakeLists.txt
apps/app/tests/src/: someClassTest.cpp
